# wyrdbound-rng

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TTRPG_CORPUS_GUIDE.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cli-tools.yml  code-quality.yml  release.yml
data/: japanese-sengoku-clan.yaml  japanese-sengoku-daimyo.yaml  japanese-sengoku.yaml  japanese-swordsmen.yaml  warhammer40k-space-marine-names.yaml
src/wyrdbound_rng/: __init__.py  bayesian_model.py  cli.py  evaluator.py  exceptions.py  generated_name.py  generator.py  name.py  name_file_loader.py  name_list_resolver.py  py.typed  statistics.py  syllable.py  syllable_stats.py
src/wyrdbound_rng/cache/: __init__.py  cache_adapter.py  json_cache_adapter.py
src/wyrdbound_rng/data/: generic-fantasy-female.yaml  generic-fantasy-male.yaml  generic-fantasy.yaml  japanese-sengoku-religious.yaml  japanese-sengoku-rogue.yaml  japanese-sengoku-samurai.yaml  japanese-sengoku-women.yaml
src/wyrdbound_rng/segmenters/: __init__.py  fantasy_name_segmenter.py  japanese_name_segmenter.py  syllable_segmenter_base.py
tests/: conftest.py  test_bayesian_logging.py  test_evaluator.py  test_generated_name.py  test_generator.py  test_name.py  test_name_file_loader.py  test_statistics.py  test_syllable.py  test_syllable_stats.py  test_yaml_loader.py
tests/segmenters/: test_fantasy_name_segmenter.py  test_japanese_name_segmenter.py  test_syllable_segmenter_base.py
tools/: analyze.py  generate.py
