[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wyrdbound-rng"
version = "1.0.0"
description = "A comprehensive random name generator library for tabletop RPGs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "The Wyrd One", email = "wyrdbound@proton.me"}
]
maintainers = [
    {name = "The Wyrd One", email = "wyrdbound@proton.me"}
]
keywords = ["names", "generator", "random", "tabletop", "rpg", "ttrpg", "fantasy", "procedural"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/wyrdbound/wyrdbound-rng"
Repository = "https://github.com/wyrdbound/wyrdbound-rng"
Documentation = "https://github.com/wyrdbound/wyrdbound-rng#readme"
"Bug Tracker" = "https://github.com/wyrdbound/wyrdbound-rng/issues"

[project.scripts]
wyrdbound-rng = "wyrdbound_rng.cli:main"

[tool.setuptools.package-data]
wyrdbound_rng = ["py.typed"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["wyrdbound_rng*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config"
